fix: form spacing

--- a/static/styles/layout.css
+++ b/static/styles/layout.css
@@ -266,7 +266,7 @@ input[type=range]:hover::-webkit-slider-thumb {
 
 .NSF-button-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 .NSF-button-container img {
